--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /.vs
+/SpriteGrabber/bin
+/SpriteGrabber/obj
+/SprinterMNG/bin
+/SprinterMNG/obj
