--- a/SpriteGrabber/App.config
+++ b/SpriteGrabber/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="SpriteGrabber.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
+    <userSettings>
+        <SpriteGrabber.Properties.Settings>
+            <setting name="SettingRectangleColor" serializeAs="String">
+                <value>Yellow</value>
+            </setting>
+            <setting name="SetRectangleColor" serializeAs="String">
+                <value>Red</value>
+            </setting>
+            <setting name="CheckerTileWidth" serializeAs="String">
+                <value>16</value>
+            </setting>
+        </SpriteGrabber.Properties.Settings>
+    </userSettings>
 </configuration>
